Fixed shadow and overflow

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100%;
     background-color: #0d1117;
+    overflow: hidden;
 }
 body {
     margin: 0;
@@ -28,7 +29,7 @@ main {
     flex-flow: row nowrap;
     padding: 15px;
 
-    box-shadow: rgba(0, 0, 0, 0.85) 0px 5px 15px;
+    box-shadow: rgba(32, 32, 32, 1) 0px 15px 20px;
     background-color: #ffffff;
 }
 
